Add editor shortcuts like italic, bold, link etc (fixes 107)

--- a/pervane/templates/index_vue.html
+++ b/pervane/templates/index_vue.html
@@ -291,6 +291,9 @@
           <p>Save: <span><b>alt + s</b></span></p>
           <p>Quick search: <span><b>alt + g</b></span></p>
           <p>Hide/Show sidebar: <span><b>alt + h</b></span></p>
+          <p>Bold text: <span><b>ctrl + b</b></span></p>
+          <p>Italic text: <span><b>ctrl + i</b></span></p>
+          <p>Convert text to link: <span><b>ctrl + k</b></span></p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">
