Fix new file creation with and without extension (fixes #114). #107 was fixed before. #101 was also fixed before (enter now submits the new node creation). Fixed Create node popup shows previously created node name  (fixes #109)

--- a/pervane/templates/index_vue.html
+++ b/pervane/templates/index_vue.html
@@ -1331,6 +1331,7 @@
         console.log('showing modal', item, item.path)
         this.newNodeParentPath = item.path
         $('#nodeModal').modal()
+        this.newNodeName = ''
         // Hack to focus on input box upon creation.
         // Without timeout, item is not ready.
         setTimeout(function () {
