Render previously active note upon refresh of the page (fixes #104)

--- a/pervane/templates/index_vue.html
+++ b/pervane/templates/index_vue.html
@@ -1301,6 +1301,14 @@
         self.showSidebar = !self.showSidebar
         return false
       })
+
+      // Start rendering previously open tabs if there is any.
+      let openTabPath = (localStorage.getItem('openTabPath') || '')
+      if (openTabPath != '') {
+        router.push({ 
+          path: '/n/' + encodeURIComponent(openTabPath) 
+        })
+      }
     },
     computed: {
       rootStyle: function() {
