--- a/pervane/templates/sidebar.html
+++ b/pervane/templates/sidebar.html
@@ -2,9 +2,52 @@
 {% raw %}
 <div class="border-right" id="sidebar-wrapper" v-if="showSidebar" v-bind:style="sidebarStyle">
 
-  <div class="sidebar-heading">
-    <a href="/">Pervane</a>
-  </div>
+  <div class="">
+    <div class="float-left">
+      <a href="/" style="margin: 5px; font-size: x-large;">Pervane</a>
+    </div>
+
+    <!-- Save/settings/shortcuts/upload -->
+    <div class="float-right">
+      <!-- TODO(hakanu): Removed physical save buttons, does anyone use it? -->
+      <!-- <span v-if="$route.params.path.endsWith('.md')">
+        <button
+            class="btn btn-large" 
+            @click="saveContent($route.params.path, editor.getMarkdown())">
+          <i class="large-font fa fa-floppy-o" aria-hidden="true"></i>
+        </button>
+      </span> -->
+
+      <!-- If it's not markdown, check if it's a code file -->
+      <!-- <span v-else>
+        <button
+            class="btn btn-large" 
+            v-if="!($route.params.path.endsWith('.jpg') ||  $route.params.path.endsWith('.mp4') || $route.params.path.endsWith('.png') || $route.params.path.endsWith('.jpeg'))"
+            @click="saveContent($route.params.path, codeEditor.getValue())">
+          <i class="large-font fa fa-floppy-o" aria-hidden="true"></i>
+        </button>
+      </span> -->
+
+      <span>
+        <button class="btn btn-large" 
+            href="#" data-toggle="modal" @click="showShortcutsModal()" title="Shortcuts">
+          <i class="large-font fa fa-keyboard-o" aria-hidden="true"></i>
+        </button>
+      </span>
+
+      <span>
+        <button class="btn btn-large fileinput-button" alt="Upload file"><i class="fa fa-upload" aria-hidden="true"></i></button>
+      </span>
+
+      <span>
+        <button class="btn btn-large" 
+          href="#" data-toggle="modal" @click="showSettingsModal()" title="Settings">
+          <i class="large-font fa fa-gear" aria-hidden="true"></i>
+        </button>
+      </span>
+    </div> <!-- /float-right -->
+  </div> <!-- /sidebar-heading -->
+
   <div class="">
     <span>
       <form class="" @submit.prevent="initSearch">
