Run gunicorn server on production instead of development flask server

--- a/pervane/templates/sidebar.html
+++ b/pervane/templates/sidebar.html
@@ -4,7 +4,7 @@
 
   <div class="">
     <div class="float-left">
-      <a href="/" style="margin: 5px; font-size: x-large;">Pervane</a>
+      <a href="/" style="margin: 5px; font-size: large;">Pervane</a>
     </div>
 
     <!-- Save/settings/shortcuts/upload -->
