Get rid of old monolithic templates, make them more modular; make the tab experience slightly better by stripping the path from the tab, instead shows the file name with title of full path (fixes #146)

--- a/pervane/static/css/styles2.css
+++ b/pervane/static/css/styles2.css
@@ -193,3 +193,18 @@ font-size: 15px;
   padding-left: 0px;
   padding-right: 0px;
 }
+
+
+.nav-tabs > li .close {
+  /* margin: -2px 0 0 10px; */
+  margin: 10px;
+  font-size: 18px;
+}
+
+.nav-tabs > li {
+  margin: 5px;
+}
+
+.nav-tabs > li:hover {
+  background-color: darkslategrey;
+}
