Add some shadow around the tabs to make them more prominent (fixes #145)

--- a/pervane/static/css/styles2.css
+++ b/pervane/static/css/styles2.css
@@ -179,8 +179,13 @@ font-size: 15px;
     padding-left: 0em;
 }
 
-.nav-link {
+.nav-link{
   font-size: small;
+}
+
+.nav-link.active {
+  border: 2px solid red;
+  border-radius: 5px;
 }
 
 .item {
