More readable quick search

--- a/pervane/static/css/styles2.css
+++ b/pervane/static/css/styles2.css
@@ -213,3 +213,12 @@ font-size: 15px;
 .nav-tabs > li:hover {
   background-color: darkslategrey;
 }
+
+.editormd-preview, .editormd-preview-theme-dark, .markdown-body {
+  font-family: "PT Sans";
+}
+
+a {
+  color: lightgreen;
+  font-style: bold;
+}
