Change default font to PT sans with sans-serif fallback

--- a/pervane/static/css/styles2.css
+++ b/pervane/static/css/styles2.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Menlo, Consolas, monospace;
+  font-family: "PT Sans", sans-serif, Menlo, Consolas, monospace;
 }
 
 .sidebar ul {
