Fix some styling issues with the sidebar. Resolves #157 by disabling update reminder; Resolves #158 for folder improvement in the sidebar

--- a/pervane/templates/sidebar.html
+++ b/pervane/templates/sidebar.html
@@ -83,7 +83,7 @@
   </div> -->
 
   <!-- File tree for real -->
-  <div class="list-group list-group-flush sidebar">
+  <div class="list-group list-group-flush sidebar file_tree">
     <ul id="root-ul" class="">
       <tree-item
         class="item"
