--- a/pervane/templates/head.html
+++ b/pervane/templates/head.html
@@ -86,25 +86,84 @@
       :class="{bold: isFolder}"
       @click="toggle"
       >
+      <span v-if="item.name" >
+        <span v-if="item.kind == 'file'" draggable
+              v-on:dragstart="drag($event, item)" 
+              class="span-item-name">
+          <router-link 
+              v-if="item.path.endsWith('.jpg') || item.path.endsWith('.png') || item.path.endsWith('.jpeg')"
+              :title="item.path"
+              :to="'/n/' + encodeURIComponent(item.path)">
+            <i class="fa fa-image" aria-hidden="true"></i> {{ item.name }}
+          </router-link>
+
+          <router-link v-else :to="'/n/' + encodeURIComponent(item.path)"
+              :title="item.path">
+            <i class="fa fa-file-text small-font" aria-hidden="true"
+                v-if="item.path.endsWith('.md')"></i>
+            <i class="fa fa-file-code-o small-font" aria-hidden="true" 
+                v-else></i> {{ item.name }}
+          </router-link>
+        </span>
+        <span v-else draggable="false" v-on:drop="drop($event, item)" class="span-item-name">
+          <i class="fa" :class="expanded() ? 'fa-angle-down' : 'fa-angle-right'" aria-hidden="true"></i> {{ item.name }}/
+        </span>
+      </span>
+      <span v-else>/</span>
+    </span>
+
+    <router-link
+        :to="'/d/' + encodeURIComponent(item.path)" 
+        :title="item.path"
+        title="Preview directory contents" v-if="item.kind == 'dir'">
+      <i class="fa fa-eye"></i>
+    </router-link>
+
+    <span title="Add a child node (file or directory)" 
+          v-if="item.kind == 'dir'"
+          @click="$emit('add-item', item)">
+      [{{ isOpen ? '+' : '+' }}]
+    </span>
+
+    <ul v-show="expanded()" v-if="item.kind == 'dir'">
+      <tree-item
+        class="item"
+        v-for="(child, index) in item.children"
+        :key="index"
+        :item="child"
+        @add-item="$emit('add-item', $event)"
+      ></tree-item>
+    </ul>
+  </li>
+</script>
+
+<!-- item template -->
+<script type="text/x-template" id="item3-template">
+  <li>
+    <span :class="{bold: isFolder}" @click="toggle">
       <span v-if="item.name">
+        <!-- File -->
         <span v-if="item.kind == 'file'" draggable
               v-on:dragstart="drag($event, item)">
           <router-link 
               v-if="item.path.endsWith('.jpg') || item.path.endsWith('.png') || item.path.endsWith('.jpeg')"
               :to="'/n/' + encodeURIComponent(item.path)"
               >
-          <i class="fa fa-image" aria-hidden="true"></i> {{ item.name }}
+            <input type="radio" :name="item.name" :id="'f_' + item.name" :value="item.name" checked>
+            <label :for="'f_' + item.name">{{ item.name }}</label>
           </router-link>
-
-          <router-link v-else :to="'/n/' + encodeURIComponent(item.path)"
-                        >
-          <i class="fa fa-file-text small-font" aria-hidden="true"
-              v-if="item.path.endsWith('.md')"></i>
-          <i class="fa fa-file-code-o small-font" aria-hidden="true" v-else></i> {{ item.name }}
+          <router-link v-else :to="'/n/' + encodeURIComponent(item.path)">
+            <input type="radio" :name="item.name" :id="'f_' + item.name" :value="item.name" checked>
+            <label :for="'f_' + item.name">{{ item.name }}</label>
           </router-link>
         </span>
+
+        <!-- Folder -->
         <span v-else draggable="false" v-on:drop="drop($event, item)">
-          <i class="fa fa-folder small-font" aria-hidden="true"></i> {{ item.name }}/
+          <div class="dir_wrapper">
+            <input type="checkbox" id="f_wehave">
+            <label for="f_wehave">We Have</label>
+          </div>
         </span>
       </span>
       <span v-else>/</span>
@@ -128,10 +187,54 @@
         v-for="(child, index) in item.children"
         :key="index"
         :item="child"
-        @add-item="$emit('add-item', $event)"
-      ></tree-item>
+        @add-item="$emit('add-item', $event)">
+        <div class="dir_wrapper">
+          <input type="checkbox" id="f_wehave">
+          <label for="f_wehave">We Have</label>
+        </div>
+    </tree-item>
     </ul>
   </li>
 </script>
+
+<script type="text/x-template" id="item4-template">
+<li>
+  <span :class="{bold: isFolder}" @click="toggle">
+    <span v-if="item.kind == 'file'">
+      <input type="radio" name="hosted_files" id="f_main_js" value="main.js" checked>
+      <label for="f_main_js">{{ item.name }}</label>
+    </span>
+    <span v-else>/</span>
+  </span>
+
+  <router-link
+      :to="'/d/' + encodeURIComponent(item.path)" 
+      title="Preview directory contents" v-if="item.kind == 'dir'">
+    <i class="fa fa-eye"></i>
+  </router-link>
+
+  <span title="Add a child node (file or directory)" 
+        v-if="item.kind == 'dir'"
+        @click="$emit('add-item', item)">
+    [{{ isOpen ? '+' : '+' }}]
+  </span>
+
+  <ul v-show="expanded()" v-if="item.kind == 'dir'">
+    <tree-item
+      class="item"
+      v-for="(child, index) in item.children"
+      :key="index"
+      :item="child"
+      @add-item="$emit('add-item', $event)">
+      <div class="dir_wrapper">
+        <input type="checkbox" id="f_wehave">
+        <label for="f_wehave">We Have</label>
+      </div>
+    </tree-item>
+  </ul>
+</li>
+</script>
+
+
 {% endraw %}
 </head>
